--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint ."
+  },
+  "dependencies": {
+    "@gitart/eslint-config-basic": "^0.1.1",
+    "bootstrap": "^5.1.3",
+    "eslint": "^8.17.0"
   },
   "devDependencies": {
     "sass": "^1.52.2",
     "vite": "^2.9.9"
-  },
-  "dependencies": {
-    "bootstrap": "^5.1.3"
   }
 }
