--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@gitart/eslint-config-basic": "^0.1.1",
     "bootstrap": "^5.1.3",
-    "eslint": "^8.17.0"
+    "eslint": "^8.17.0",
+    "js-event-bus": "^1.1.1"
   },
   "devDependencies": {
     "sass": "^1.52.2",
