--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.18.2",
     "@gitart/eslint-config-basic": "^0.1.1",
     "bootstrap": "^5.1.3",
     "eslint": "^8.17.0",
